# cfx-minimal-execution

./: .gitignore  .gitmodules  Cargo.toml  README.md  USER_MEMO.md
crates/: replay-data-executor
crates/cfxpack/: Cargo.toml  DESIGN.md
crates/cfxpack/src/: codec.rs  container.rs  lib.rs  verify.rs
crates/cfxpack/src/decode/: mod.rs  tx.rs
crates/cfxpack/src/packet/: encode.rs  mod.rs
crates/minimal-mpt/: Cargo.toml  README.md
crates/minimal-mpt/docs/: BUGLOG.md  DEV_DOC.md  FUZZ_COVERAGE_AUDIT.md  ORACLE_COVERAGE_AUDIT.md  SPEC.md
crates/minimal-mpt/fuzz/: Cargo.toml
crates/minimal-mpt/fuzz/fuzz_targets/: incremental_trie.rs  large_trie_ops.rs  layered_state_ops.rs  state_ops.rs
crates/minimal-mpt/scripts/: check_fuzz_coverage.py  check_oracle_coverage.py  coverage_fuzz_layered.sh  coverage_fuzz_state_ops.sh  coverage_oracle_cfx_storage.sh  coverage_standalone.sh  prepare_oracle.sh  run_oracle_compare.sh  verify_full.sh
crates/minimal-mpt/src/: incremental.rs  key_codec.rs  lib.rs  snapshot.rs  state.rs  store.rs  trie.rs  types.rs
crates/minimal-mpt/src/state/: mod.rs  prefix.rs  rotation.rs
crates/minimal-mpt/tests/: api.rs
crates/replay-data-executor/: Cargo.toml  DESIGN.md
crates/replay-data-executor/fuzz/: Cargo.toml
crates/replay-data-executor/fuzz/fuzz_targets/: encode_decode.rs  raw_packet.rs
crates/replay-data-executor/src/: cli.rs  codec.rs  decode.rs  lib.rs  main.rs  packet.rs  verify.rs
crates/replay-data-executor/src/extract/: mod.rs  pack.rs  shards.rs
crates/replay-data-extractor/: Cargo.toml  DESIGN.md  mainnet.toml
crates/replay-data-extractor/fuzz/: Cargo.toml
crates/replay-data-extractor/fuzz/fuzz_targets/: encode_decode.rs  raw_packet.rs
crates/replay-data-extractor/src/: bench.rs  cli.rs  decode.rs  lib.rs  main.rs  packet.rs  raw.rs  validate.rs
crates/replay-data-extractor/src/cli/: commands.rs  mod.rs
crates/replay-data-extractor/src/extract/: db.rs  flagpatch.rs  mod.rs  pack.rs  shards.rs  tables.rs
crates/replay-data-extractor/tests/: replay_plan.rs
docs/: cfxpack_patch_changelog.md
