[package]
name = "cfx-minimal-mpt"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
bincode = "1.3"
arbitrary = { version = "1.4", features = ["derive"] }
rustc-hash = "2.0"

[features]
# Cross-check the incremental delta root against the stateless `trie_root`
# oracle on every commit. On for tests automatically; enable for fuzzing. Off
# in the replay so it pays only the incremental cost.
verify-incremental = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[[bin]]
name = "trace_standalone"
path = "src/bin/trace_standalone.rs"
