[package]
name = "cfx-replay-data-extractor"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
bcs = "0.1.3"
byteorder = "1.5"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
hex = "0.4"
rlp = "0.6"
rocksdb = { git = "https://github.com/Conflux-Chain/rust-rocksdb.git", rev = "672b02bc21874a5e91705f3642dac3614a7a8f9e" }
snap = "1.1"
thiserror = "2.0"

# The shared `.cfxpack` wire-format layer. Pins the same conflux git rev as the
# deps below, so its `primitives`/`cfx-types` unify with this crate's.
cfxpack = { path = "../cfxpack" }
cfx-types = { git = "https://github.com/Conflux-Chain/conflux-rust.git", rev = "817bed88afb11161824b7ec93876c76a38250db8" }
diem-crypto = { git = "https://github.com/Conflux-Chain/conflux-rust.git", rev = "817bed88afb11161824b7ec93876c76a38250db8" }
diem-types = { git = "https://github.com/Conflux-Chain/conflux-rust.git", rev = "817bed88afb11161824b7ec93876c76a38250db8" }
primitives = { git = "https://github.com/Conflux-Chain/conflux-rust.git", rev = "817bed88afb11161824b7ec93876c76a38250db8" }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "cfx-replay-data-extractor"
path = "src/main.rs"
